@startuml

interface Vida {
    + aplicarDanio(unAtaque : Ataque)
    + pasarTurno()
}

class VidaSimple {
    - capacidad : int
    - cantidad : int

    + aplicarAtaque(unAtaque : Ataque)
    + pasarTurno()
}

class VidaRegenerativa {
    - porcentajeDeRegeneracion : double
    - cantidad : int
    - capacidad : int

    + VidaRegenerativa(capacidad : int)
    + aplicarAtaque(unAtaque : Ataque)
    + pasarTurno()
}

class VidaConEscudo {
    - cantidadVida : int
    - porcentajeDeRegeneracion : double
    - cantidadDeEscudo : int
    - capacidadEscudo : int

    + VidaConEscudo(vida : int, escudo : int)
    + aplicarAtaque(unAtaque : Ataque)
    + pasarTurno()
}

Vida <|.. VidaRegenerativa
Vida <|.. VidaConEscudo
Vida <|.. VidaSimple

@enduml